# dgs-ia-first

./: .gitignore  README.md
Prática 1/resolution/: AGENTS.md  CLAUDE.md  README.md  create_prd.md  create_tasks.md  create_techspec.md  execute_bugfix.md  execute_qa.md  execute_review.md  execute_task.md  pyproject.toml
Prática 1/resolution/.claude/agents/: task-reviewer.md
Prática 1/resolution/novatech_rag/: __init__.py  __main__.py  cli.py  config.py  interfaces.py  logging.py  models.py
Prática 1/resolution/novatech_rag/eval/: __init__.py  anexo_b_gold.py  guardrail_suite.py  llm_judge.py  report.py  retrieval_evaluator.py
Prática 1/resolution/novatech_rag/ingestion/: __init__.py  chunker.py  embeddings.py  loader.py  pipeline.py  sections.py  vector_store.py
Prática 1/resolution/novatech_rag/prompt/: CHANGELOG.md  __init__.py  assembler.py  system_prompt_v1.md  system_prompt_v2.md
Prática 1/resolution/novatech_rag/retrieval/: __init__.py  conflict_detector.py  retriever.py
Prática 1/resolution/prd/: create_prd.md  prd-novatech-assistente.md  techspec-novatech-assistente.md
Prática 1/resolution/reports/: eval-report.json
Prática 1/resolution/tasks/prd-novatech-assistente/: 1_task.md  2_task.md  2_task_review.md  3_task.md  3_task_review.md  4_task.md  (+9 more)
Prática 1/resolution/tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_conflict_detector.py  test_embeddings.py  test_llm_judge.py  test_loader.py  test_models.py  test_package_smoke.py  test_prompt_assembler.py  test_retrieval_evaluator.py  test_retriever.py  test_vector_store.py
(+60 files in other folders)
