[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novatech-rag"
version = "0.1.0"
description = "PoC RAG da NovaTech: ingestão, retrieval e montagem de prompt sobre ChromaDB local (Ex. 1.3)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "NovaTech" }]
dependencies = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
# Geração local opcional na PoC; o pipeline programático termina na montagem do prompt.
ollama = ["ollama>=0.3"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# CLI (`python -m novatech_rag ingest|query|eval`) entra na Tarefa 7.0 via __main__.

[tool.setuptools.packages.find]
include = ["novatech_rag*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que exercitam ChromaDB/sentence-transformers reais (podem baixar o modelo)",
]
